syntax = "proto3";

package saacs.auth.v0;

import "buf/validate/validate.proto";
import "google/protobuf/descriptor.proto";

import "saacs/common/v0/enums.proto";

message Polices {
  // key is the item type
  map<string, PathPolicy> item_policies = 1;

  // Default policy for all items
  PathPolicy default_policy = 2;

  // The types that are excluded from the default policy
  repeated string default_excluded_types = 3;
}

// This message is the tree node for operations on the state item
message PathPolicy {
  // The path is a sub path of a field mask
  string path = 1;
  string full_path = 2;

  bool allow_sub_paths = 3;
  // The key is a valid sub path in the type of state item
  map<string, PathPolicy> sub_paths = 4;

  // If the policy is not set than use a parent policy unless nested policy is set
  repeated saacs.common.v0.Action actions = 5;

  option (buf.validate.message).cel = {
    id: "SubPathsAllowed"
    message: "Sub Paths are not allowed"
    expression: "!this.allow_sub_paths && this.sub_paths.size() > 0"
  };
  // option (buf.validate.message).cel = {
  //   id: "pathAndFullPath"
  //   message: "Path must be a sub path of full path"
  //   expression: "!this.allow_sub_paths && this.sub_paths.size() > 0"
  // };
}
